--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
         .cart-section{
             width: 100%;
         }
+        #weather-widget {
+            background: #007bff;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            font-size: 14px;
+        }
         
     </style>
 </head>
