--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
     </style>
 </head>
 <body>
+<div id="Weather-widget">
+    <p><strong>City:</strong><span id="city">Loading...</span></p>
+    <p><strong>Temparature:</strong><span id="temp">--</span>C</p>
+</div>
 
 <header>
     <h1>Sound System Store</h1>
