--- a/index.html
+++ b/index.html
@@ -272,6 +272,19 @@
     renderProducts();
     renderCart();
 </script>
+<script>
+    async function fetchWeather() {
+        const CITY="Nairobi"
+        const url="https://api.open-meteo.com/v1/forecast?latitude=52.52&longitude=13.41&current=temperature_2m,wind_speed_10m&hourly=temperature_2m,relative_humidity_2m,wind_speed_10m"
+        const response= await fetch(url);
+        const data=await response.json();
+
+        document.getElementById("city").innerText=data.name;
+        document.getElementById("temp").innerText=data.main.Temp;
+        
+    }
+    fetchWeather();
+</script>
 
 </body>
 </html>
