--- a/index.html
+++ b/index.html
@@ -116,10 +116,7 @@
     </style>
 </head>
 <body>
-<div id="Weather-widget">
-    <p><strong>City:</strong><span id="city">Loading...</span></p>
-    <p><strong>Temparature:</strong><span id="temp">--</span>C</p>
-</div>
+<div id="Weather-widget">Loading weather...</div>
 
 <header>
     <h1>Sound System Store</h1>
@@ -274,15 +271,23 @@
 </script>
 <script>
     async function fetchWeather() {
-        const CITY="Nairobi"
-        const url="https://api.open-meteo.com/v1/forecast?latitude=52.52&longitude=13.41&current=temperature_2m,wind_speed_10m&hourly=temperature_2m,relative_humidity_2m,wind_speed_10m"
-        const response= await fetch(url);
-        const data=await response.json();
+        try {
+            const response = await fetch("https://ipapi.co/json/");
+            const locationData = await response.json();
+            const city = locationData.city;
 
-        document.getElementById("city").innerText=data.name;
-        document.getElementById("temp").innerText=data.main.Temp;
-        
+            const weatherResponse = await fetch("ttps://api.open-meteo.com/v1/forecast?latitude=52.52&longitude=13.41&current=temperature_2m,wind_speed_10m&hourly=temperature_2m,relative_humidity_2m,wind_speed_10m")
+            const weatherData = await weatherResponse.json();
+
+            const temperature = weatherData.main.temp;
+            const conditions = weatherData.weather[0].description;
+
+            document.getElementById("weather-widget").innerText = `Today's Weather in ${city}: ${temperature}°C, ${conditions}`;
+        } catch (error) {
+            document.getElementById("weather-widget").innerText = "Weather data unavailable";
+        }
     }
+
     fetchWeather();
 </script>
 
