--- a/index.html
+++ b/index.html
@@ -270,25 +270,44 @@
     renderCart();
 </script>
 <script>
-    async function fetchWeather() {
+      async function fetchWeather(lat, lon) {
+        const url = `https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current=temperature_2m,wind_speed_10m&hourly=relative_humidity_2m&timezone=auto`;
+
         try {
-            const response = await fetch("https://ipapi.co/json/");
-            const locationData = await response.json();
-            const city = locationData.city;
+            const response = await fetch(url);
+            const data = await response.json();
 
-            const weatherResponse = await fetch("ttps://api.open-meteo.com/v1/forecast?latitude=52.52&longitude=13.41&current=temperature_2m,wind_speed_10m&hourly=temperature_2m,relative_humidity_2m,wind_speed_10m")
-            const weatherData = await weatherResponse.json();
+            if (data.current) {
+                const temp = data.current.temperature_2m;
+                const windSpeed = data.current.wind_speed_10m;
+                const humidity = data.hourly.relative_humidity_2m[0];
 
-            const temperature = weatherData.main.temp;
-            const conditions = weatherData.weather[0].description;
-
-            document.getElementById("weather-widget").innerText = `Today's Weather in ${city}: ${temperature}°C, ${conditions}`;
+                document.getElementById("weather-widget").innerText = 
+                    `🌤️ Temp: ${temp}°C | 💨 Wind: ${windSpeed} m/s | 💧 Humidity: ${humidity}%`;
+            } else {
+                document.getElementById("weather-widget").innerText = "Weather data unavailable";
+            }
         } catch (error) {
-            document.getElementById("weather-widget").innerText = "Weather data unavailable";
+            document.getElementById("weather-widget").innerText = "Error fetching weather data";
         }
     }
 
-    fetchWeather();
+    function getUserLocation() {
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(
+                (position) => {
+                    fetchWeather(position.coords.latitude, position.coords.longitude);
+                },
+                () => {
+                    fetchWeather(1.2921,36.8219)
+                }
+            );
+        } else {
+            document.getElementById("weather-widget").innerText = "Geolocation not supported";
+        }
+    }
+
+    getUserLocation();
 </script>
 
 </body>
