--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
             height: 30px;
             margin: 5px;
         }
-        @media (max-width: 800px){
+        @media (max-width:1024px){
             .product-list {
-                grid-template-columns: repeat(3, 3fr);
+                grid-template-columns: repeat(3,3fr);
             }
         }
-        @media (max-width: 786px){
+        @media (max-width:600px){
             .product-list {
-                grid-template-columns: repeat(2, 2fr);
+                grid-template-columns: repeat(2,1fr);
             }
         }
         .cart-section{
