--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
             margin: 5px;
         }
         @media (max-width:1024px){
-            .product-list,body{
+            .product-list{
                 grid-template-columns: repeat(3,3fr);
             }
         }
         @media (max-width:480px){
-            .product-list,.body{
+            .product-list{
                 grid-template-columns: repeat(2,1fr);
             }
         }
