--- a/index.html
+++ b/index.html
@@ -271,11 +271,14 @@
     renderCart();
 </script>
 <script>
-      async function fetchWeather(lat, lon) {
+    async function fetchWeather(lat, lon) {
         const url = `https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current=temperature_2m,wind_speed_10m&hourly=relative_humidity_2m&timezone=auto`;
 
         try {
             const response = await fetch(url);
+            if (!response.ok) {
+                throw new Error(`HTTP error! Status: ${response.status}`);
+            }
             const data = await response.json();
 
             if (data.current) {
@@ -289,6 +292,7 @@
                 document.getElementById("weather-widget").innerText = "Weather data unavailable";
             }
         } catch (error) {
+            console.error('Error fetching weather data:', error);
             document.getElementById("weather-widget").innerText = "Error fetching weather data";
         }
     }
@@ -300,7 +304,7 @@
                     fetchWeather(position.coords.latitude, position.coords.longitude);
                 },
                 () => {
-                    fetchWeather(1.2921,36.8219)
+                    fetchWeather(1.2921, 36.8219);
                 }
             );
         } else {
