--- a/index.html
+++ b/index.html
@@ -111,9 +111,8 @@
             padding: 10px;
             text-align: center;
             font-size: 14px;
-            border-radius:10px
+            border-radius: 10px;
         }
-        
     </style>
 </head>
 <body>
