--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
     </style>
 </head>
 <body>
-<div id="Weather-widget">Loading weather...</div>
+
+    <div id="weather-widget">Loading weather...</div>
 
 <header>
     <h1>Sound System Store</h1>
@@ -268,51 +269,50 @@
     
     renderProducts();
     renderCart();
-</script>
-<script>
+
     async function fetchWeather(lat, lon) {
-        const url = `https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current=temperature_2m,wind_speed_10m&hourly=relative_humidity_2m&timezone=auto`;
+            const url = `https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current=temperature_2m,wind_speed_10m&hourly=temperature_2m,relative_humidity_2m,wind_speed_10m&timezone=auto`;
 
-        try {
-            const response = await fetch(url);
-            if (!response.ok) {
-                throw new Error(`HTTP error! Status: ${response.status}`);
-            }
-            const data = await response.json();
-
-            if (data.current) {
-                const temp = data.current.temperature_2m;
-                const windSpeed = data.current.wind_speed_10m;
-                const humidity = data.hourly.relative_humidity_2m[0];
-
-                document.getElementById("weather-widget").innerText = 
-                    `🌤️ Temp: ${temp}°C | 💨 Wind: ${windSpeed} m/s | 💧 Humidity: ${humidity}%`;
-            } else {
-                document.getElementById("weather-widget").innerText = "Weather data unavailable";
-            }
-        } catch (error) {
-            console.error('Error fetching weather data:', error);
-            document.getElementById("weather-widget").innerText = "Error fetching weather data";
-        }
-    }
-
-    function getUserLocation() {
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(
-                (position) => {
-                    fetchWeather(position.coords.latitude, position.coords.longitude);
-                },
-                () => {
-                    fetchWeather(1.2921, 36.8219);
+            try {
+                const response = await fetch(url);
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
                 }
-            );
-        } else {
-            document.getElementById("weather-widget").innerText = "Geolocation not supported";
+                const data = await response.json();
+
+                if (data.current) {
+                    const temp = data.current.temperature_2m;
+                    const windSpeed = data.current.wind_speed_10m;
+                    const humidity = data.hourly.relative_humidity_2m[0];
+
+                    document.getElementById("weather-widget").innerText = 
+                        `🌤️ Temp: ${temp}°C | 💨 Wind: ${windSpeed} m/s | 💧 Humidity: ${humidity}%`;
+                } else {
+                    document.getElementById("weather-widget").innerText = "Weather data unavailable";
+                }
+            } catch (error) {
+                console.error('Error fetching weather data:', error);
+                document.getElementById("weather-widget").innerText = "Error fetching weather data";
+            }
         }
-    }
 
-    getUserLocation();
+        function getUserLocation() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(
+                    (position) => {
+                        fetchWeather(position.coords.latitude, position.coords.longitude);
+                    },
+                    () => {
+                        fetchWeather(1.2921,36.8219);
+                    }
+                );
+            } else {
+                document.getElementById("weather-widget").innerText = "Geolocation not supported";
+            }
+        }
+
+        getUserLocation();
+    </script>
 </script>
-
 </body>
 </html>
