--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
     { id:10, name:"Custom Lights",price:70,image:"OrcaJump - Luz Led Coche 1pc - Novedades en Iluminación.jpeg"},
     { id:11, name:"Crossovers",price:110,image:"Cadence Processor Electronic Crossover Subwoofer.jpeg"},
     { id:12, name:"Bass Knob",price:7,image:"Amazon_com_ Nobsound Auto Car Amplifier Audio Subwoofer Bass Control Knob Sub Gain Equalizer Regulator Frequency Controller RCA Line Level Adjust _ Electronics.jpeg"},
+    {id:12,name:"Capacitor",price:130,image:"12 tips for the best sound quality in your car.jpeg"},
     ];
 
     const shippingRates = { standard: 10, express: 25 };
