--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 70px;
+            margin:auto;
             border-style: solid;
             padding: 10px;
             background-color: rgba(25, 33, 105, 0.724);
