--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="social-media">
         <a href="https://www.facebook.com/"><img src="Facebook Logo PNG.jpeg" alt="Facebook"></a>
         <a href="https://www.instagram.com/"><img src="Instagram PNG.jpeg" alt="Instagram"></a>
-        <a href="https://www.twitter.com/"><img src="Twitter X Icon PNG.jpeg" alt="Twitter"></a>
+        <a href="https://www.twitter.com/ @_Mumo-254"><img src="Twitter X Icon PNG.jpeg" alt="Twitter"></a>
         <a href="https://www.youtube.com/"><img src="Youtube Logo PNG.jpeg" alt="YouTube"></a>
         <a href="https://www.linkedin.com/"><img src="Download Linkedin logo png, Linkedin logo transparent png, Linkedin icon transparent free png.jpeg" alt="LinkedIn"></a>
     </div>
