--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <a href="https://www.facebook.com/"><img src="Facebook Logo PNG.jpeg" alt="Facebook"></a>
         <a href="https://www.instagram.com/"><img src="Instagram PNG.jpeg" alt="Instagram"></a>
         <a href="https://www.twitter.com/ @_Mumo-254"><img src="Twitter X Icon PNG.jpeg" alt="Twitter"></a>
-        <a href="https://www.youtube.com/"><img src="Youtube Logo PNG.jpeg" alt="YouTube"></a>
+        <a href="https://www.youtube.com/ TobiasNDANGILI"><img src="Youtube Logo PNG.jpeg" alt="YouTube"></a>
         <a href="https://www.linkedin.com/"><img src="Download Linkedin logo png, Linkedin logo transparent png, Linkedin icon transparent free png.jpeg" alt="LinkedIn"></a>
     </div>
 </footer>
