--- a/index.html
+++ b/index.html
@@ -295,7 +295,8 @@
     } else if (method === "visa") {
         paymentURL = "https://www.visa.co.ke/checkout?amount=${totalAmount}";
     } else if (method === "mobile-money") {
-        paymentURL = "https://www.safaricom.co.ke/main-mpesa/m-pesa-services/m-pesa-go/checkout?amount=${totalAmount};    }
+        paymentURL = "https://www.safaricom.co.ke/main-mpesa/m-pesa-services/m-pesa-go/checkout?amount=${totalAmount}";
+    }
 
     if (paymentURL) {
         window.location.href = paymentURL;
