--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="payment-options">
             <button class="paypal" onclick="redirectToPayment('paypal')">Pay with PayPal</button>
             <button class="visa" onclick="redirectToPayment('visa')">Pay with Visa</button>
-            <button class="m-pesa" onclick="redirectToPayment('m-pesa')">Pay with Mobile Money</button>
+            <button class="m-pesa" onclick="redirectToPayment('m-pesa')">Pay with M-pesa</button>
             <div class="checkout-container">
         <h2>Checkout</h2>
         <p>Total Amount: <strong>$<span id="total-amount">0.00</span></strong></p>
