--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <p>Discount: $<span id="discount">0.00</span></p>
             <p>Shipping: $<span id="shipping-cost">10.00</span></p>
             <h3>Total: $<span id="total">0.00</span></h3>
-            <button class="checkout-btn" onclick="proceedToPayment()">Proceed to Payment</button> 
+            <button class="checkout-btn" onclick="checkout()">checkout?amount</button> 
         </div>
     </div>
     <div class="payment-section" id="payment-section">
