--- a/index.html
+++ b/index.html
@@ -158,7 +158,6 @@
             <p>Discount: $<span id="discount">0.00</span></p>
             <p>Shipping: $<span id="shipping-cost">10.00</span></p>
             <h3>Total: $<span id="total">0.00</span></h3>
-            <button class="checkout-btn" onclick="checkout()">checkout?amount</button> 
         </div>
     </div>
     <div class="payment-section" id="payment-section">
@@ -170,7 +169,7 @@
             <div class="checkout-container">
         <h2>Checkout</h2>
         <p>Total Amount: <strong>$<span id="total-amount">0.00</span></strong></p>
-        <button class="pay-btn" onclick="completePayment()">Complete Payment</button>
+        <button class="checkout-btn" onclick="checkout()">Checkout</button> 
         <h3 id="payment-status" style="color: green; display: none;">Payment Complete!</h3>
 
         </div>
