--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <button class="m-pesa" onclick="redirectToPayment('m-pesa')">Pay with M-pesa</button>
             <div class="checkout-container">
         <h2>Checkout</h2>
-        <p>Total Amount: <strong>$<span id="total-amount">0.00</span></strong></p>
+        <p>Total Amount: <strong>$<span id="total-amount">"Total: $"/span></strong></p>
         <button class="checkout-btn" onclick="checkout()">Checkout</button> 
         <h3 id="payment-status" style="color: green; display: none;">Payment Complete!</h3>
 
