added a remove button update

--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
                 <h3>${product.name}</h3>
                 <p>Price: $${product.price}</p>
                 <button onclick="addToCart(${product.id})">Add to Cart</button>
+                <button onclick="removeFromCart(${product.id})">Remove from Cart</button>
             `;
             productList.appendChild(productElement);
         });
