--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
                 <img src="${product.image}" alt="${product.name}">
                 <h3>${product.name}</h3>
                 <p>Price: $${product.price}</p>
+                <label for="quantity-${product.id}">Quantity:</label>
+                <input type="number" id="quantity-${product.id}" value="1" min="1">
                 <button onclick="addToCart(${product.id})">Add to Cart</button>
                 <button onclick="removeFromCart(${product.id})">Remove from Cart</button>
             `;
@@ -229,11 +231,13 @@
 
     function addToCart(id) {
         const product = products.find(p => p.id === id);
+        const quantityInput=document.getElementById("quantity-${id}");
+        const quantity=parseInt(quantityInput.value);
         const existingItem = cart.find(item => item.id === id);
         if (existingItem) {
-            existingItem.quantity++;
+            existingItem.quantity+=quantity;
         } else {
-            cart.push({ ...product, quantity: 1 });
+            cart.push({ ...product, quantity});
         }
         saveCart();
         renderCart();
@@ -242,7 +246,11 @@
     function removeFromCart(id) {
         const index = cart.findIndex(item => item.id === id);
         if (index !== -1) {
-            cart.splice(index, 1);
+            if(cart[index].quantity>1){
+                cart[index].quantity--;
+            }else{
+                cart.splice(index, 1);
+            }
         }
         saveCart();
         renderCart();
